--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,37 @@
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text">Социальные сети</div>
     </aside>
+
+    <div class="menu">
+        <div class="menu__block">
+            <div class="menu__close"><img src="icons/Close.svg" alt="close"></div>
+            
+            <nav>
+                <ul class="menu__list">
+                    <li class="menu__link"><a href="#">Про меня</a></li>
+                    <li class="menu__link"><a href="#">Мой опыт</a></li>
+                    <li class="menu__link"><a href="#">Мои навыки</a></li>
+                    <li class="menu__link"><a href="#">Мои работы</a></li>
+                    <li class="menu__link"><a href="#">Прайс-лист</a></li>
+                    <li class="menu__link"><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+
+            <div class="menu__social">
+                <a href="" class="menu__social_rotate"><img src="icons/social/github.svg" alt=""></a>
+                <a href="" class="menu__social_rotate"><img src="icons/social/instagram.svg" alt=""></a>
+                <a href="" class="menu__social_rotate"><img src="icons/social/facebook.svg" alt=""></a>
+            </div>
+        </div>
+        <div class="menu__overlay"></div>
+    </div>
+
     <section class="promo">
+        <div class="hamburger">
+            <span></span>
+            <span class="long"></span>
+            <span></span>
+        </div>
         <div class="container">
             <div class="title title_fz16 promo__subtitle">Меня зовут Виктор</div>
             <h1 class="title title_fz48 promo__title">Я - web-разработчик из города НН</h1>
