--- a/src/index.html
+++ b/src/index.html
@@ -205,6 +205,51 @@
         </div>
     </section>
 
+    <section class="skills">
+        <div class="container">
+            <div class="title title_fz16 skills__title">Навыки</div>
+            <div class="title title_fz36 skills__subtitle">Что я использую в работе</div>
+            <div class="divider"></div>
+            <div class="skills__wrapper">
+                <div class="skills_item">
+                    <img src="icons/skills/html5.svg" alt="html5">
+                    <div class="skills_item__title">HTML5</div>
+                    <div class="skills_item__descr">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+                </div>
+                <div class="skills_item">
+                    <img src="icons/skills/css3.svg" alt="css3">
+                    <div class="skills_item__title">CSS3</div>
+                    <div class="skills_item__descr">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+                </div>
+                <div class="skills_item">
+                    <img src="icons/skills/js.svg" alt="js">
+                    <div class="skills_item__title">Java Script</div>
+                    <div class="skills_item__descr">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+                </div>
+                <div class="skills_item">
+                    <img src="icons/skills/jquery.svg" alt="jquery">
+                    <div class="skills_item__title">Jquery</div>
+                    <div class="skills_item__descr">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</div>
+                </div>
+                <div class="skills_item">
+                    <img src="icons/skills/react.svg" alt="react">
+                    <div class="skills_item__title">React</div>
+                    <div class="skills_item__descr">Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</div>
+                </div>
+                <div class="skills_item">
+                    <img src="icons/skills/node.js.svg" alt="node.js">
+                    <div class="skills_item__title">Node</div>
+                    <div class="skills_item__descr">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</div>
+                </div>
+                <div class="skills_item">
+                    <img src="icons/skills/mongo.db.svg" alt="mongo.db">
+                    <div class="skills_item__title">Mongo</div>
+                    <div class="skills_item__descr">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
