--- a/src/index.html
+++ b/src/index.html
@@ -44,15 +44,15 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <!-- <aside class="sidepanel">
+    <aside class="sidepanel">
         <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
         <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
         <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text">Социальные сети</div>
-    </aside> -->
+    </aside>
 
-    <!-- <div class="menu">
+    <div class="menu">
         <div class="menu__block">
             <div class="menu__close"><img src="icons/Close.svg" alt="close"></div>
             
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="menu__overlay"></div>
-    </div> -->
+    </div>
 
     <section class="promo">
         <div class="hamburger">
@@ -96,6 +96,11 @@
         <div class="container">
             <div class="about__wrapper">
                 <img src="img/main_photo2.jpg" alt="photo" class="about__photo">
+                <!-- <picture>
+                    <source media="(max-width: 576px)" srcset="img/main_photo2.jpg">
+                    <source media="(min-width: 577px)" srcset="img/main_photo2.jpg">
+                    <img src="img/main_photo2.jpg" alt="photo" class="about__photo">
+                </picture> -->
                 <div class="about__descr">
                     <div class="title title_fz16 about__title">Про меня</div>
                     <div class="title title_fz36 about__subtitle ">Меня зовут Виктор</div>
@@ -293,7 +298,7 @@
         </div>
     </section>
 
-    <!-- <section class="portfolio">
+    <section class="portfolio">
         <div class="container">
             <div class="title title_fz16 title_section-title">Портфолио</div>
             <div class="title title_fz36 title_section-subtitle">Мои работы</div>
@@ -320,9 +325,9 @@
                 </a>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="price">
+    <section class="price">
         <div class="container">
             <div class="title title_fz16 title_section-title">Прайс-лист</div>
             <div class="divider"></div>
@@ -359,7 +364,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="contacts">
         <div class="container">
